baml_language/crates/baml_tests/snapshots/parser_error_recovery/baml_tests__parser_error_recovery__02_parser__partial_input.snap
---
source: target/debug/build/baml_tests-cb4594c533e23a52/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Partial"
    L_BRACE "{"
    FIELD
      WORD "field1"
      TYPE_EXPR " str"
        WORD "str"
    FIELD
      WORD "field2"
      TYPE_EXPR "  // Missing type entirely
  field3"
        WORD "field3"
    FIELD
      WORD "string"
      TYPE_EXPR
      ATTRIBUTE " @  // Incomplete attribute
  field4"
        AT "@"
        WORD "field4"
    FIELD
      WORD "string"
      TYPE_EXPR
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS "(  // Unclosed attribute
  field5"
          L_PAREN "("
          WORD "field5"
    FIELD
      WORD "string"
      TYPE_EXPR
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "Incomplete"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "param1"
        TYPE_EXPR " string"
          WORD "string"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "NextFunction"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        RETURN_STMT
          KW_RETURN "return"
          STRING_LITERAL " "parsed""
            QUOTE """
            WORD "parsed"
            QUOTE """
        R_BRACE "}"
  ENUM_DEF "

enum  // Missing enum name
  VALUE1"
    KW_ENUM "enum"
    WORD "VALUE1"
  WORD "VALUE2"
  R_BRACE "}"
  ENUM_DEF
    KW_ENUM "enum"
    WORD "ValidEnum"
    L_BRACE "{"
    ENUM_VARIANT "  // Should parse this
  OPTION1"
      WORD "OPTION1"
    ENUM_VARIANT "
  OPTION2"
      WORD "OPTION2"
    R_BRACE "}"

=== ERRORS ===
Error: Expected type, found At
   ╭─[ 0:5:17 ]
   │
 5 │   field3 string @  // Incomplete attribute
   │                 ┬  
   │                 ╰── Expected type, found At
───╯

Error: Expected type, found At
   ╭─[ 0:6:17 ]
   │
 6 │   field4 string @alias(  // Unclosed attribute
   │                 ┬  
   │                 ╰── Expected type, found At
───╯

Error: Expected RParen, found Word
   ╭─[ 0:7:10 ]
   │
 7 │   field5 string  // This should parse correctly
   │          ───┬──  
   │             ╰──── Expected RParen, found Word
───╯

Error: Expected type, found RBrace
   ╭─[ 0:8:1 ]
   │
 8 │ }
   │ ┬  
   │ ╰── Expected type, found RBrace
───╯

Error: Expected RParen, found Function
    ╭─[ 0:13:1 ]
    │
 13 │ function NextFunction() -> string {  // Should still parse this
    │ ────┬───  
    │     ╰───── Expected RParen, found Function
────╯

Error: Expected return type (->), found Function
    ╭─[ 0:13:1 ]
    │
 13 │ function NextFunction() -> string {  // Should still parse this
    │ ────┬───  
    │     ╰───── Expected return type (->), found Function
────╯

Error: Expected function body, found Function
    ╭─[ 0:13:1 ]
    │
 13 │ function NextFunction() -> string {  // Should still parse this
    │ ────┬───  
    │     ╰───── Expected function body, found Function
────╯

Error: Expected LBrace, found Word
    ╭─[ 0:19:3 ]
    │
 19 │   VALUE2
    │   ───┬──  
    │      ╰──── Expected LBrace, found Word
────╯

Error: Expected top-level declaration, found Word
    ╭─[ 0:19:3 ]
    │
 19 │   VALUE2
    │   ───┬──  
    │      ╰──── Expected top-level declaration, found Word
────╯

Error: Expected top-level declaration, found RBrace
    ╭─[ 0:20:1 ]
    │
 20 │ }
    │ ┬  
    │ ╰── Expected top-level declaration, found RBrace
────╯
